# PiPicoCalculatorC

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  1602.c  CMakeLists.txt  README.md  blink.c  helloworld.c  keypad.c  main.c  matrixkeypad1.c  oled.c  pico_keypad4x4.h  serialcalc.c
.github/workflows/: main.yml
keypad4x4/: pico_keypad4x4.h
lcdlib/: lcdlib.c
pico-ssd1306/: ssd1306.c  ssd1306.h
src/: CMakeLists.txt  helloworld.c
ss_oled/: CMakeLists.txt
